# pybmc

./: pyproject.toml  tinkering.ipynb
src/pybmc/: __init__.py  builtin.py  expr.py  irep.py  location.py  machine_model.py  stmt.py  symbol.py  typ.py
tests/: test_cbmc.py
