[project]
name = "pybmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Philip Zucker", email = "philzook58@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
